# wujie-xiuzhen-game

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  rustfmt.toml
android-wrapper/: README.md  settings.gradle.kts
android-wrapper/app/: build.gradle.kts
crates/cq-admin/: Cargo.toml
crates/cq-admin/src/: characters.rs  items.rs  lib.rs  mail.rs  mobs.rs  operations.rs  settings.rs  users.rs  world.rs
crates/cq-db/: Cargo.toml
crates/cq-db/src/: backup.rs  lib.rs  migrations.rs  pool.rs  tx.rs
crates/cq-domain/: Cargo.toml
crates/cq-game/: Cargo.toml
crates/cq-game/src/: lib.rs
crates/cq-game/src/afk/: mod.rs
crates/cq-game/src/boss/: mod.rs
crates/cq-game/src/command/: mod.rs
crates/cq-game/src/cultivation/: mod.rs
crates/cq-game/src/drop/: mod.rs
crates/cq-game/src/ranking/: mod.rs
crates/cq-game/src/sabak/: mod.rs
crates/cq-game/src/tick/: mod.rs
crates/cq-game/src/treasure/: mod.rs
crates/cq-game/src/world/: mod.rs
crates/cq-protocol/: Cargo.toml
crates/cq-server/: Cargo.toml
crates/cq-server/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  state.rs  static_files.rs
crates/cq-server/src/http/: admin.rs  auth.rs  characters.rs  game.rs  health.rs  mod.rs  trade.rs
crates/cq-server/src/ws/: mod.rs
docker/: Caddyfile  README.md  backup.sh  migrate.sh  restore.sh
migrations/: 0001_accounts_sessions.sql  0002_characters.sql  0003_items_inventory.sql  0004_world_mobs.sql  0005_mail.sql  0006_guilds.sql  0007_trade_consignment.sql  0008_pets_treasures.sql  0009_skills.sql  0010_activity_vip.sql  0011_admin_audit_settings.sql  0012_backup_jobs.sql  0013_indexes.sql  0014_seed_item_templates.sql  0015_seed_world_mobs.sql  0016_sabak.sql  0017_afk.sql  0018_rankings.sql  0019_security_rate_limits.sql  0020_game_config_versions.sql  0021_refresh_starter_content.sql  0022_seed_live_ops.sql  0023_seed_skills.sql  0024_guild_members_one_guild.sql  0025_skill_cooldowns.sql  0026_seed_systems.sql  0027_seed_recharge_cards.sql  0028_seed_xiuxian_modes.sql  0029_legend_world_rebalance.sql  0030_passive_skills_and_consumables.sql  0031_enhance_wild_afk_skill_books.sql  0032_equipment_luck_drop_rebalance.sql  0033_bairimen_molong_tower_wild_afk.sql  0034_quests.sql  0035_trade_economy_fees.sql  0036_guild_play_indexes.sql  0037_system_growth.sql  0038_pk_settings.sql  0039_yuanbao_vip_idle_bots_balance.sql  0040_trade_currency_bot_world_growth.sql  (+27 more)
scripts/: deploy-ubuntu24.sh  docker.sh  smoke-ws.mjs  smoke.sh
web/admin/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/player/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/shared/: protocol.md
(+55 files in other folders)
